--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -8,5 +8,16 @@
 </ion-header>
 
 <ion-content padding>
-  <p>Página de categorias</p>
+  <ion-list>
+    <button ion-item *ngFor="let item of items">
+      <!-- button: deixando toda a area da categoria clicável, ngFor: cria itens de acordo com a colecao descrita no arquivo .ts -->
+      <ion-thumbnail slot="start">
+        <img
+          src="{{bucketURL}}/cat{{item.id}}.jpg"
+        />
+      </ion-thumbnail>
+      <h2>{{ item.nome}}</h2>
+      <!-- {{ }} -- interpolação: substitui dinamicamente com o conteudo vindo do 'categorias.ts' -->
+    </button>
+  </ion-list>
 </ion-content>
